# lootcrab

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: 01-ownership.md  02-error-handling.md  03-structs-enums.md  04-traits.md  05-async.md  06-modules.md  07-concurrency.md
src/: error.rs  main.rs
src/commands/: dev.rs  games.rs  general.rs  mod.rs  timer.rs
src/models/: mod.rs
src/services/: config.rs  free_games.rs  mod.rs  scheduler.rs
src/utils/: mod.rs
