[package]
name = "lootcrab"
version = "0.1.0"
edition = "2024"
authors = ["wilou"]
description = "Discord bot for free games notifications and dev tools, built in Rust"
license = "MIT"

[dependencies]
# Discord API framework (built on serenity, uses rustls — no OpenSSL dependency)
poise = "0.6"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }

# Environment variables from .env files
dotenvy = "0.15"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (rustls backend — no OpenSSL dependency)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
